--- a/client/src/components/features/Logout/Logout.css
+++ b/client/src/components/features/Logout/Logout.css
@@ -11,8 +11,9 @@
 .LogOutBtn{
     position: relative;
     bottom: 55vh;
-    left: 80vw;
+    left: 70vw;
     color: black;
+    cursor: pointer;
 }
 .aboutContainer{
      display: flex;
