--- a/client/src/components/layout/Footer/Footer.css
+++ b/client/src/components/layout/Footer/Footer.css
@@ -5,6 +5,7 @@
     border-top:2px solid rgb(0, 0, 0);
     width: 100%;
     color: white;
+    margin-top: 10vh;
     font-size: 25px;
     font-size: 1rem;
     opacity: 0.5;
